--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ DB_NAME=database
 DB_USER=root
 DB_PASSWORD=root
 DB_ROOT_PASSWORD=password
-DB_HOST=mariadb
+DB_HOST=db
 DB_PORT=3306
 DB_DRIVER=mysql
 
